--- a/about.css
+++ b/about.css
@@ -8,7 +8,7 @@ section{
   width: 100%;
   height: 100vh;
   color: #fff;
-  background: linear-gradient(-60deg, #f2f2f2, #8cb3d9, #ffff99, #ff6666);
+  background: linear-gradient(-60deg, #9fdf9f, #c68c53, #e6ffff, #ffffcc);
   background-size: 310% 310%;
   position: relative;
   animation: change 60s ease-in-out infinite;
